--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -2,6 +2,6 @@
 What is the difference between `.then` and `.catch`? What are the similarities?
 
 # Answer
-
+ **then()** and **catch()** are alike in ways that almost make them the same. They both handle promises and with the differences, **then()** is brought up when dealing with the success of a promise and lets you dictate what should be doing upon success. **catch()** is brought up when dealing with the failure of a promise, and lets you dictate what should be done upon that failure.  
 
 # Teacher Feedback
