--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -6,6 +6,7 @@ a. calling `resolve()` or `reject()`
 b. calling *and* returning them
 
 # Answer
+With new Promise calling resolve() or reject() makes the promise produce a value 
 
 
 # Teacher Feedback
