--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -2,6 +2,5 @@
 with `new Promise((resolve, reject) => {...})`, what do the arguments that you pass into `resolve/reject` do?
 
 # Answer
-
-
+The arguments will determine if the promise is fulfilled or rejected
 # Teacher Feedback
