--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -9,6 +9,6 @@ console.log('Outside promise')
 Which prints first: `Inside promise` or `Outside promise`. More importantly, can you explain why?
 
 # Answer
-
+The outside promise will log first due to this code being synchronous, while outside promise is asynchronous. 
 
 # Teacher Feedback
