--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -12,3 +12,5 @@ Which prints first: `Inside promise` or `Outside promise`. More importantly, can
 The outside promise will log first due to this code being synchronous, while outside promise is asynchronous. 
 
 # Teacher Feedback
+Score: 3/3
+Nice!
