--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -4,3 +4,5 @@ with `new Promise((resolve, reject) => {...})`, what do the arguments that you p
 # Answer
 The arguments will determine if the promise is fulfilled or rejected
 # Teacher Feedback
+Score: 3/3
+Nice
