--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -5,3 +5,5 @@ What is the difference between `.then` and `.catch`? What are the similarities?
  **then()** and **catch()** are alike in ways that almost make them the same. They both handle promises and with the differences, **then()** is brought up when dealing with the success of a promise and lets you dictate what should be doing upon success. **catch()** is brought up when dealing with the failure of a promise, and lets you dictate what should be done upon that failure.  
 
 # Teacher Feedback
+Score: 3/3
+This looks great. Love your explanation!
