--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -1,12 +1,15 @@
 # Question
+
 With `new Promise((resolve, reject) => {...})`, which of the following makes the promise produce a value?
 
 a. calling `resolve()` or `reject()`
 
-b. calling *and* returning them
+b. calling _and_ returning them
 
 # Answer
-With new Promise calling resolve() or reject() makes the promise produce a value 
 
+With new Promise calling resolve() or reject() makes the promise produce a value
 
 # Teacher Feedback
+
+Score: 3/3
